@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               Don-Mendo
-version:            0.0.6
+version:            0.0.7
 abstract:           Modules for "La venganza de Don Mendo", Sir Mendo's revenge.
 author:
     - JJ Merelo <jj@merelo.net>
 license:            unknown
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Carp:        0
@@ -15,7 +17,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.46
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
