@@ -1,10 +1,12 @@
+use lib qw( ../../lib ); # for syntax checking -*-CPerl-*-
+
 package Don::Mendo;
 
 use warnings;
 use strict;
 use Carp;
 
-our $VERSION = "0.0.6";
+our $VERSION = "0.0.7";
 
 # Other recommended modules (uncomment to use):
 #  use IO::Prompt;
@@ -45,7 +47,10 @@ sub jornadas {
 1; # Magic true value required at end of module
 
 
+=encoding utf8
+
 =head1 NAME
+
 
 Don::Mendo - Modules for "La venganza de Don Mendo", Sir Mendo's revenge.
 
@@ -57,7 +62,7 @@ This document describes Don::Mendo version 0.0.3.
 
     use Don::Mendo;
     my $don_mendo = new Don::Mendo;
-    my $first_act = $don_mendo->jornadas(0); #Acts in the play are
+    my $first_act = $don_mendo->jornadas->[0]; #Acts in the play are
 				#"jornadas"
     $first_act->tell(); #Print the whole act
     my $lines_for_mendo = $first_act->lines_for_character('Mendo');
@@ -87,7 +92,7 @@ Returns the whole text, in the original version
 
 =head2 jornadas()
 
-Returns the array with the 4 journeys that constitute the play
+Returns an arrayref with the 4 journeys that constitute the play
 
 =head1 DEPENDENCIES
 
@@ -109,7 +114,12 @@ Please report any bugs or feature requests to
 C<bug-don-mendo@rt.cpan.org>, or through the web interface at
 L<http://rt.cpan.org>.
 
+=head1 Acknowledgements
 
+	The author is grateful to the Madrid Perl Mongers, for having a
+	look at the code and using it in their talks, specially Diego
+	Kuperman and Joaquin Ferrero. 
+	
 =head1 AUTHOR
 
 JJ Merelo  C<< <jj@merelo.net> >>
@@ -4452,7 +4462,7 @@ ceremoniosamente. Vase.)
         MENDO.– Guárdeos Dios, pulida dama.
 
 
-        MAGDAENA.– Y a vos, flor de la poesía,
+        MAGDALENA.– Y a vos, flor de la poesía,
 que venís por dicha mía
 adonde mi amor os llama.
 
@@ -5104,7 +5114,7 @@ hará la Parca un milagro. (Revolviéndose y trazando en el aire con su puñal l
 
 
                                                            94
-     NUÑO y PERO.– (Como antes.) ¡¡No!! (Vuelven a tumbarse. Todos retroceden horrorizados.)
+     NUÑO y PERO.– (Como antes.) ¡¡No!! (Vuelven a tumbarse. Todos retroceden horrorizados.)
 
 
      AZOFAIFA.– (Clavando su puñal en el pecho de Magdalena.) ¡Baldón de mujeres, muere!
@@ -5251,4 +5261,4 @@ y don Mendo... mató a menda. (Muere.) (Telón)
 
 
                                                          97
-
+
